// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSchemeProvider renders styling for dark mode when specified 1`] = `
<style>
  :root {
  --g-colorRed100: #ff5247;
  --g-colorRed100Active: #b8001b;
  --g-colorRed100Hovered: #cf001f;
  --g-colorGray0: #030303;
  --g-colorGray50: #212121;
  --g-colorGray100: #404040;
  --g-colorGray100Active: #666;
  --g-colorGray100Hovered: #535353;
  --g-colorGray200: #ababab;
  --g-colorGray300: #efefef;
  --g-colorGray400: #fff;
  --g-colorTransparentDarkGray: rgb(255 255 255 / 0.8);
  --g-colorTransparentGray60: rgb(250 250 250 / 0.5);
  --g-colorTransparentGray100: rgb(250 250 250 / 0.6);
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-disabled: #4a4a4a;
  --color-text-error: #f47171;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-icon-default: #ffffff;
  --color-icon-subtle: #a5a5a5;
  --color-icon-success: #39d377;
  --color-icon-disabled: #4a4a4a;
  --color-icon-error: #f47171;
  --color-icon-warning: #e18d00;
  --color-icon-info: #75bfff;
  --color-icon-recommendation: #b190ff;
  --color-icon-inverse: #111111;
  --color-icon-shopping: #75bfff;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-info-strong: #abdbff;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-neutral: #cdcdcd;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-border-container: #767676;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-data-visualization-10: #007A72;
  --color-data-visualization-11: #f76593;
  --color-data-visualization-12: #ffc58f;
  --color-data-visualization-primary: #75bfff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error-graph: #f47171;
  --color-data-visualization-error-text: #eb4242;
  --color-data-visualization-01: #005fcb;
  --color-data-visualization-02: #75e4d5;
  --color-data-visualization-03: #B190FF;
  --color-data-visualization-04: #FDA600;
  --color-data-visualization-05: #75bfff;
  --color-data-visualization-06: #de2c62;
  --color-data-visualization-07: #a4f9ac;
  --color-data-visualization-08: #812ae7;
  --color-data-visualization-09: #ff5b45;
  --button-color-primary-active: #b8001b;
  --button-color-secondary-default: #4a4a4a;
  --button-color-secondary-hover: #535353;
  --button-color-secondary-active: #666;
  --button-color-tertiary-hover: rgba(250, 250, 250, 0.5);
  --button-color-tertiary-active: rgba(250, 250, 250, 0.6);
  --button-color-shopping-active: #4a85c9;
  --button-color-white-default: #030303;
  --button-color-white-hover: #121212;
  --button-color-white-active: #1f1f1f;
  --button-color-gray-hover: #919191;
  --button-color-gray-active: #9b9b9b;
  --button-color-semitransparentwhite-default: rgba(51, 51, 51, 0.8);
  --button-color-semitransparentwhite-hover: #121212;
  --button-color-semitransparentwhite-active: #1f1f1f;
  --button-color-semitransparentdark-default: rgba(255, 255, 255, 0.8);
  --button-color-semitransparentdark-hover: #f0f0f0;
  --button-color-semitransparentdark-active: #e0e0e0;
  --button-color-disabled-default: #4a4a4a;
  --overlay-color-background: #2b2b2b;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when no color scheme specified 1`] = `
<style>
  :root {
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray200: #767676;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgb(51 51 51 / 0.8);
  --g-colorTransparentGray60: rgb(0 0 0 / 0.06);
  --g-colorTransparentGray100: rgb(0 0 0 / 0.1);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --button-color-primary-active: #a3081a;
  --button-color-secondary-default: #e9e9e9;
  --button-color-secondary-hover: #e2e2e2;
  --button-color-secondary-active: #dadada;
  --button-color-tertiary-hover: rgba(0, 0, 0, 0.06);
  --button-color-tertiary-active: rgba(0, 0, 0, 0.1);
  --button-color-shopping-active: #4a85c9;
  --button-color-white-default: #ffffff;
  --button-color-white-hover: #f0f0f0;
  --button-color-white-active: #e0e0e0;
  --button-color-gray-hover: #878787;
  --button-color-gray-active: #828282;
  --button-color-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --button-color-semitransparentwhite-hover: #f0f0f0;
  --button-color-semitransparentwhite-active: #e0e0e0;
  --button-color-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --button-color-semitransparentdark-hover: #121212;
  --button-color-semitransparentdark-active: #1f1f1f;
  --button-color-disabled-default: #e9e9e9;
  --overlay-color-background: #ffffff;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling for light mode when specified 1`] = `
<style>
  :root {
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray200: #767676;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgb(51 51 51 / 0.8);
  --g-colorTransparentGray60: rgb(0 0 0 / 0.06);
  --g-colorTransparentGray100: rgb(0 0 0 / 0.1);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --button-color-primary-active: #a3081a;
  --button-color-secondary-default: #e9e9e9;
  --button-color-secondary-hover: #e2e2e2;
  --button-color-secondary-active: #dadada;
  --button-color-tertiary-hover: rgba(0, 0, 0, 0.06);
  --button-color-tertiary-active: rgba(0, 0, 0, 0.1);
  --button-color-shopping-active: #4a85c9;
  --button-color-white-default: #ffffff;
  --button-color-white-hover: #f0f0f0;
  --button-color-white-active: #e0e0e0;
  --button-color-gray-hover: #878787;
  --button-color-gray-active: #828282;
  --button-color-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --button-color-semitransparentwhite-hover: #f0f0f0;
  --button-color-semitransparentwhite-active: #e0e0e0;
  --button-color-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --button-color-semitransparentdark-hover: #121212;
  --button-color-semitransparentdark-active: #1f1f1f;
  --button-color-disabled-default: #e9e9e9;
  --overlay-color-background: #ffffff;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with a custom class if has an id 1`] = `
<style>
  .__gestaltThemetestId {
  --g-colorRed100: #e60023;
  --g-colorRed100Active: #a3081a;
  --g-colorRed100Hovered: #ad081b;
  --g-colorGray0: #fff;
  --g-colorGray50: #fff;
  --g-colorGray100: #efefef;
  --g-colorGray100Active: #dadada;
  --g-colorGray100Hovered: #e2e2e2;
  --g-colorGray200: #767676;
  --g-colorGray300: #111;
  --g-colorGray400: #000;
  --g-colorTransparentDarkGray: rgb(51 51 51 / 0.8);
  --g-colorTransparentGray60: rgb(0 0 0 / 0.06);
  --g-colorTransparentGray100: rgb(0 0 0 / 0.1);
  --color-text-default: #111111;
  --color-text-subtle: #767676;
  --color-text-success: #005f3e;
  --color-text-disabled: #a5a5a5;
  --color-text-error: #cc0000;
  --color-text-warning: #bd5b00;
  --color-text-inverse: #ffffff;
  --color-text-shopping: #0074e8;
  --color-text-link: #004ba9;
  --color-icon-default: #111111;
  --color-icon-subtle: #767676;
  --color-icon-success: #005f3e;
  --color-icon-disabled: #a5a5a5;
  --color-icon-error: #cc0000;
  --color-icon-warning: #bd5b00;
  --color-icon-info: #0074e8;
  --color-icon-recommendation: #812ae7;
  --color-icon-inverse: #ffffff;
  --color-icon-shopping: #0074e8;
  --color-background-default: #ffffff;
  --color-background-info-base: #0074e8;
  --color-background-info-weak: #d7edff;
  --color-background-info-strong: #005fcb;
  --color-background-error-base: #cc0000;
  --color-background-error-weak: #ffe0e0;
  --color-background-warning-base: #bd5b00;
  --color-background-warning-weak: #ffe4c1;
  --color-background-success-base: #008753;
  --color-background-success-weak: #c3f9c2;
  --color-background-recommendation-base: #812ae7;
  --color-background-recommendation-weak: #e9e4ff;
  --color-background-neutral: #767676;
  --color-background-shopping: #0074e8;
  --color-background-secondary-base: #e9e9e9;
  --color-background-tertiary-base: #767676;
  --color-background-selected-base: #111111;
  --color-background-inverse-base: #111111;
  --color-background-education: #0074e8;
  --color-background-elevation-accent: #f1f1f1;
  --color-background-elevation-floating: rgba(0, 0, 0, 0);
  --color-background-elevation-raised: rgba(0, 0, 0, 0);
  --color-border-container: #cdcdcd;
  --color-border-default: #767676;
  --color-border-error: #cc0000;
  --color-data-visualization-10: #005062;
  --color-data-visualization-11: #de2c62;
  --color-data-visualization-12: #660e00;
  --color-data-visualization-primary: #0081fe;
  --color-data-visualization-success-graph: #008753;
  --color-data-visualization-success-text: #005f3e;
  --color-data-visualization-error-graph: #ed0000;
  --color-data-visualization-error-text: #cc0000;
  --color-data-visualization-01: #003c96;
  --color-data-visualization-02: #11a69c;
  --color-data-visualization-03: #924af7;
  --color-data-visualization-04: #d17711;
  --color-data-visualization-05: #0081fe;
  --color-data-visualization-06: #ff5383;
  --color-data-visualization-07: #00ab55;
  --color-data-visualization-08: #400387;
  --color-data-visualization-09: #f2681f;
  --button-color-primary-active: #a3081a;
  --button-color-secondary-default: #e9e9e9;
  --button-color-secondary-hover: #e2e2e2;
  --button-color-secondary-active: #dadada;
  --button-color-tertiary-hover: rgba(0, 0, 0, 0.06);
  --button-color-tertiary-active: rgba(0, 0, 0, 0.1);
  --button-color-shopping-active: #4a85c9;
  --button-color-white-default: #ffffff;
  --button-color-white-hover: #f0f0f0;
  --button-color-white-active: #e0e0e0;
  --button-color-gray-hover: #878787;
  --button-color-gray-active: #828282;
  --button-color-semitransparentwhite-default: rgba(255, 255, 255, 0.8);
  --button-color-semitransparentwhite-hover: #f0f0f0;
  --button-color-semitransparentwhite-active: #e0e0e0;
  --button-color-semitransparentdark-default: rgba(51, 51, 51, 0.8);
  --button-color-semitransparentdark-hover: #121212;
  --button-color-semitransparentdark-active: #1f1f1f;
  --button-color-disabled-default: #e9e9e9;
  --overlay-color-background: #ffffff;
  --elevation-floating: 0 0 8px rgba(0, 0, 0, 0.10);
  --elevation-raised-top: 0 2px 8px rgba(0, 0, 0, 0.12);
  --elevation-raised-bottom: 0 -2px 8px rgba(0, 0, 0, 0.12);
 }
</style>
`;

exports[`ColorSchemeProvider renders styling with media query when userPreference 1`] = `
<style>
  @media(prefers-color-scheme: dark) {
  :root {
  --g-colorRed100: #ff5247;
  --g-colorRed100Active: #b8001b;
  --g-colorRed100Hovered: #cf001f;
  --g-colorGray0: #030303;
  --g-colorGray50: #212121;
  --g-colorGray100: #404040;
  --g-colorGray100Active: #666;
  --g-colorGray100Hovered: #535353;
  --g-colorGray200: #ababab;
  --g-colorGray300: #efefef;
  --g-colorGray400: #fff;
  --g-colorTransparentDarkGray: rgb(255 255 255 / 0.8);
  --g-colorTransparentGray60: rgb(250 250 250 / 0.5);
  --g-colorTransparentGray100: rgb(250 250 250 / 0.6);
  --color-text-default: #ffffff;
  --color-text-subtle: #a5a5a5;
  --color-text-success: #39d377;
  --color-text-disabled: #4a4a4a;
  --color-text-error: #f47171;
  --color-text-warning: #e18d00;
  --color-text-inverse: #111111;
  --color-text-shopping: #75bfff;
  --color-text-link: #45a3fe;
  --color-icon-default: #ffffff;
  --color-icon-subtle: #a5a5a5;
  --color-icon-success: #39d377;
  --color-icon-disabled: #4a4a4a;
  --color-icon-error: #f47171;
  --color-icon-warning: #e18d00;
  --color-icon-info: #75bfff;
  --color-icon-recommendation: #b190ff;
  --color-icon-inverse: #111111;
  --color-icon-shopping: #75bfff;
  --color-background-default: #111111;
  --color-background-info-base: #75bfff;
  --color-background-info-weak: #003c96;
  --color-background-info-strong: #abdbff;
  --color-background-error-base: #f47171;
  --color-background-error-weak: #660000;
  --color-background-warning-base: #fdc900;
  --color-background-warning-weak: #7c2d00;
  --color-background-success-base: #6bec8c;
  --color-background-success-weak: #00422c;
  --color-background-recommendation-base: #b190ff;
  --color-background-recommendation-weak: #550aa9;
  --color-background-neutral: #cdcdcd;
  --color-background-shopping: #75bfff;
  --color-background-secondary-base: #767676;
  --color-background-tertiary-base: #cdcdcd;
  --color-background-selected-base: #e9e9e9;
  --color-background-inverse-base: #f9f9f9;
  --color-background-education: #75bfff;
  --color-background-elevation-accent: #191919;
  --color-background-elevation-floating: #2b2b2b;
  --color-background-elevation-raised: #4a4a4a;
  --color-border-container: #767676;
  --color-border-default: #cdcdcd;
  --color-border-error: #f47171;
  --color-data-visualization-10: #007A72;
  --color-data-visualization-11: #f76593;
  --color-data-visualization-12: #ffc58f;
  --color-data-visualization-primary: #75bfff;
  --color-data-visualization-success-graph: #6bec8c;
  --color-data-visualization-success-text: #39d377;
  --color-data-visualization-error-graph: #f47171;
  --color-data-visualization-error-text: #eb4242;
  --color-data-visualization-01: #005fcb;
  --color-data-visualization-02: #75e4d5;
  --color-data-visualization-03: #B190FF;
  --color-data-visualization-04: #FDA600;
  --color-data-visualization-05: #75bfff;
  --color-data-visualization-06: #de2c62;
  --color-data-visualization-07: #a4f9ac;
  --color-data-visualization-08: #812ae7;
  --color-data-visualization-09: #ff5b45;
  --button-color-primary-active: #b8001b;
  --button-color-secondary-default: #4a4a4a;
  --button-color-secondary-hover: #535353;
  --button-color-secondary-active: #666;
  --button-color-tertiary-hover: rgba(250, 250, 250, 0.5);
  --button-color-tertiary-active: rgba(250, 250, 250, 0.6);
  --button-color-shopping-active: #4a85c9;
  --button-color-white-default: #030303;
  --button-color-white-hover: #121212;
  --button-color-white-active: #1f1f1f;
  --button-color-gray-hover: #919191;
  --button-color-gray-active: #9b9b9b;
  --button-color-semitransparentwhite-default: rgba(51, 51, 51, 0.8);
  --button-color-semitransparentwhite-hover: #121212;
  --button-color-semitransparentwhite-active: #1f1f1f;
  --button-color-semitransparentdark-default: rgba(255, 255, 255, 0.8);
  --button-color-semitransparentdark-hover: #f0f0f0;
  --button-color-semitransparentdark-active: #e0e0e0;
  --button-color-disabled-default: #4a4a4a;
  --overlay-color-background: #2b2b2b;
  --elevation-floating: none;
  --elevation-raised-top: 0 0.5px 0 #f9f9f9;
  --elevation-raised-bottom: 0 -0.5px 0 #f9f9f9;
 }
}
</style>
`;
